--- a/wp-content/uploads/elementor/css/post-8.css
+++ b/wp-content/uploads/elementor/css/post-8.css
@@ -3,6 +3,6 @@
 	font-style: normal;
 	font-weight: normal;
 	font-display: auto;
-	src: url('https://madeinnatural.com.br/wp-content/uploads/2022/11/Neucha.ttf') format('truetype');
+	src: url('https://madeinnatural.e-cavalheri.com.br/wp-content/uploads/2022/11/Neucha.ttf') format('truetype');
 }
 /* End Custom Fonts CSS */
